auto publishing updates to notebooks

--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "537ca71f",
+   "id": "f4bdf47e",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66607e80",
+   "id": "5e3a39b1",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a32e7893",
+   "id": "c5b91091",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0134705e",
+   "id": "d806ca62",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82bfd52e",
+   "id": "fcff0f60",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "880e5065",
+   "id": "60bbd0f9",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e1b4ccc",
+   "id": "18ad534b",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9161836",
+   "id": "c256ad48",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "637c88d9",
+   "id": "e6bca251",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "443d5fd5",
+   "id": "79e30b19",
    "metadata": {},
    "source": [
     "## Example 1: marginal distributions\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2028563f",
+   "id": "db175566",
    "metadata": {
     "hide-output": false
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b33d3a1",
+   "id": "37532243",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dc82013",
+   "id": "bb649c16",
    "metadata": {
     "hide-output": false
    },
@@ -243,19 +243,19 @@
     "    return res\n",
     "\n",
     "\n",
-    "def shift_firms_forward(x_init, firm, sample_dates, \n",
+    "def shift_firms_forward(x_init, firm, sample_dates,\n",
     "                        key, num_firms=50_000, sim_length=750):\n",
-    "    \n",
+    "\n",
     "    X = res = jnp.full((num_firms, ), x_init)\n",
     "\n",
     "    # Use for loop to update X and collect samples\n",
     "    for i in range(sim_length):\n",
     "        Z = random.normal(key, shape=(num_firms, ))\n",
     "        D = jnp.exp(firm.mu + firm.sigma * Z)\n",
-    "        \n",
+    "\n",
     "        X = update_X(X, firm, D)\n",
     "        _, key = random.split(key)\n",
-    "        \n",
+    "\n",
     "        # draw a sample at the sample dates\n",
     "        if (i+1 in sample_dates):\n",
     "          res = jnp.vstack((res, X))\n",
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c857d7f2",
+   "id": "54a7785f",
    "metadata": {
     "hide-output": false
    },
@@ -283,7 +283,7 @@
     "                              sample_dates, key).block_until_ready()\n",
     "\n",
     "for i, date in enumerate(sample_dates):\n",
-    "   plot_kde(X[i, :], ax, label=f't = {date}')\n",
+    "    plot_kde(X[i, :], ax, label=f't = {date}')\n",
     "\n",
     "ax.set_xlabel('inventory')\n",
     "ax.set_ylabel('probability')\n",
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff723e35",
+   "id": "d891c834",
    "metadata": {},
    "source": [
     "Note that we did not JIT-compile the outer loop, since\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "612cdf61",
+   "id": "2a9f03de",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d15506dd",
+   "id": "ad5a7417",
    "metadata": {
     "hide-output": false
    },
@@ -326,16 +326,16 @@
     "@jax.jit\n",
     "def shift_firms_forward(x_init, firm, key,\n",
     "                        num_firms=50_000, sim_length=750):\n",
-    "    \n",
+    "\n",
     "    s, S, mu, sigma = firm.s, firm.S, firm.mu, firm.sigma\n",
     "    X = jnp.full((num_firms, ), x_init)\n",
     "    Z = random.normal(key, shape=(sim_length, num_firms))\n",
     "    D = jnp.exp(mu + sigma * Z)\n",
-    "    \n",
+    "\n",
     "    # Define the function for each update\n",
     "    def update_X(X, D):\n",
-    "        res = jnp.where(X <= s, \n",
-    "                  jnp.maximum(S - D, 0), \n",
+    "        res = jnp.where(X <= s,\n",
+    "                  jnp.maximum(S - D, 0),\n",
     "                  jnp.maximum(X - D, 0))\n",
     "        return res, res\n",
     "\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7179ce2d",
+   "id": "e7092852",
    "metadata": {},
    "source": [
     "The benefit of the `lax.scan` implementation is that we compile the whole\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3134d73c",
+   "id": "e888f3b8",
    "metadata": {
     "hide-output": false
    },
@@ -379,7 +379,7 @@
     "%time X = shift_firms_forward(x_init, firm, key).block_until_ready()\n",
     "\n",
     "for date in sample_dates:\n",
-    "   plot_kde(X[date, :], ax, label=f't = {date}')\n",
+    "    plot_kde(X[date, :], ax, label=f't = {date}')\n",
     "\n",
     "ax.set_xlabel('inventory')\n",
     "ax.set_ylabel('probability')\n",
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71ca4ee0",
+   "id": "61db6628",
    "metadata": {},
    "source": [
     "Notice that by $ t=500 $ or $ t=750 $ the densities are barely\n",
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d288084",
+   "id": "9a4030a6",
    "metadata": {
     "hide-output": false
    },
@@ -420,7 +420,7 @@
     "%time X = shift_firms_forward(x_init, firm, key).block_until_ready()\n",
     "\n",
     "for date in sample_dates:\n",
-    "   plot_kde(X[date, :], ax, label=f't = {date}')\n",
+    "    plot_kde(X[date, :], ax, label=f't = {date}')\n",
     "\n",
     "ax.set_xlabel('inventory')\n",
     "ax.set_ylabel('probability')\n",
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "876f108c",
+   "id": "72322152",
    "metadata": {},
    "source": [
     "## Example 2: restock frequency\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23dd20f8",
+   "id": "46b491bc",
    "metadata": {
     "hide-output": false
    },
@@ -459,19 +459,19 @@
     "# Define a jitted function for each update\n",
     "@jax.jit\n",
     "def update_stock(n_restock, X, firm, D):\n",
-    "  n_restock = jnp.where(X <= firm.s,\n",
-    "                        n_restock + 1,\n",
-    "                        n_restock)\n",
-    "  X = jnp.where(X <= firm.s,\n",
-    "                jnp.maximum(firm.S - D, 0),\n",
-    "                jnp.maximum(X - D, 0))\n",
-    "  return n_restock, X, key\n",
+    "    n_restock = jnp.where(X <= firm.s,\n",
+    "                          n_restock + 1,\n",
+    "                          n_restock)\n",
+    "    X = jnp.where(X <= firm.s,\n",
+    "                  jnp.maximum(firm.S - D, 0),\n",
+    "                  jnp.maximum(X - D, 0))\n",
+    "    return n_restock, X, key\n",
     "\n",
-    "def compute_freq(firm, key, \n",
-    "                 x_init=70, \n",
-    "                 sim_length=50, \n",
+    "def compute_freq(firm, key,\n",
+    "                 x_init=70,\n",
+    "                 sim_length=50,\n",
     "                 num_firms=1_000_000):\n",
-    "    \n",
+    "\n",
     "    # Prepare initial arrays\n",
     "    X = jnp.full((num_firms, ), x_init)\n",
     "\n",
@@ -485,14 +485,14 @@
     "        n_restock, X, key = update_stock(\n",
     "            n_restock, X, firm, D)\n",
     "        key = random.fold_in(key, i)\n",
-    "        \n",
+    "\n",
     "    return jnp.mean(n_restock > 1, axis=0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "740bbd7f",
+   "id": "1961f34e",
    "metadata": {
     "hide-output": false
    },
@@ -505,29 +505,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34f58318",
+   "id": "c1291307",
    "metadata": {},
    "source": [
-    "### Alternative implementation with `lax.scan`\n",
+    "### Alternative implementation with `lax.fori_loop`\n",
     "\n",
-    "Now let’s write a `lax.scan` version that JIT compiles the whole function"
+    "Now let’s write a `lax.fori_loop` version that JIT compiles the whole function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38ea5f71",
+   "id": "0125c9dc",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "@jax.jit\n",
-    "def compute_freq(firm, key, \n",
-    "                 x_init=70, \n",
-    "                 sim_length=50, \n",
+    "def compute_freq(firm, key,\n",
+    "                 x_init=70,\n",
+    "                 sim_length=50,\n",
     "                 num_firms=1_000_000):\n",
-    "    \n",
+    "\n",
     "    s, S, mu, sigma = firm.s, firm.S, firm.mu, firm.sigma\n",
     "    # Prepare initial arrays\n",
     "    X = jnp.full((num_firms, ), x_init)\n",
@@ -536,34 +536,31 @@
     "\n",
     "    # Stack the restock counter on top of the inventory\n",
     "    restock_count = jnp.zeros((num_firms, ))\n",
-    "    Xs = jnp.vstack((X, restock_count))\n",
+    "    Xs = (X, restock_count)\n",
     "\n",
     "    # Define the function for each update\n",
-    "    def update_X(Xs, D):\n",
-    "\n",
+    "    def update_X(i, Xs):\n",
     "        # Separate the inventory and restock counter\n",
-    "        X = Xs[0]\n",
-    "        restock_count =  Xs[1]\n",
+    "        x, restock_count = Xs[0], Xs[1]\n",
+    "        restock_count = jnp.where(x <= s,\n",
+    "                                restock_count + 1,\n",
+    "                                restock_count)\n",
+    "        x = jnp.where(x <= s,\n",
+    "                      jnp.maximum(S - D[i], 0),\n",
+    "                      jnp.maximum(x - D[i], 0))\n",
     "\n",
-    "        restock_count = jnp.where(X <= s,\n",
-    "                            restock_count + 1,\n",
-    "                            restock_count)\n",
-    "        X = jnp.where(X <= s, \n",
-    "                      jnp.maximum(S - D, 0),\n",
-    "                      jnp.maximum(X - D, 0))\n",
-    "        \n",
-    "        Xs = jnp.vstack((X, restock_count))\n",
-    "        return Xs, None\n",
+    "        Xs = (x, restock_count)\n",
+    "        return Xs\n",
     "\n",
-    "    # Use lax.scan to perform the calculations on all states\n",
-    "    X_final, _ = lax.scan(update_X, Xs, D)\n",
+    "    # Use lax.fori_loop to perform the calculations on all states\n",
+    "    X_final = lax.fori_loop(0, sim_length, update_X, Xs)\n",
     "\n",
-    "    return np.mean(X_final[1] > 1)"
+    "    return jnp.mean(X_final[1] > 1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8c7cd01b",
+   "id": "41f5b977",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -572,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdad8502",
+   "id": "47ccb635",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +581,7 @@
   }
  ],
  "metadata": {
-  "date": 1695019732.2509446,
+  "date": 1695173318.4106634,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
