--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c55ab04f",
+   "id": "db2ecd00",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f42f95d4",
+   "id": "59fdf50f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d104e40",
+   "id": "a99880fc",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2aa8bd8f",
+   "id": "d5cf9461",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a240483",
+   "id": "d74feeb1",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67e3f5d6",
+   "id": "b8d95365",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1154c6ad",
+   "id": "432a50c6",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db043fcf",
+   "id": "093a2357",
    "metadata": {
     "hide-output": false
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef5265d8",
+   "id": "f707a501",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b368f8a",
+   "id": "8d4d72a8",
    "metadata": {
     "hide-output": false
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77d2cef9",
+   "id": "d2844a84",
    "metadata": {},
    "source": [
     "Here we go"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eadf8006",
+   "id": "2c703ff0",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8685a4ca",
+   "id": "3f35fd51",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53b36f45",
+   "id": "13dceed0",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7b0ecfc",
+   "id": "d6726381",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f11de825",
+   "id": "cf0ac91f",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2b8c992",
+   "id": "44b07a52",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f557f69",
+   "id": "6f284405",
    "metadata": {
     "hide-output": false
    },
@@ -314,18 +314,15 @@
     "        if(n > max_iter):\n",
     "            raise Exception('Max iteration reached without convergence')\n",
     "        y = q(x)\n",
-    "        if jnp.any(jnp.isnan(y)):\n",
-    "            raise Exception('Solution not found with NaN generated')\n",
     "        error = jnp.linalg.norm(x - y)\n",
     "        x = y\n",
     "        print(f'iteration {n}, error = {error}')\n",
-    "    print('\\n' + f'Result = {x} \\n')\n",
     "    return x"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "58a8eeef",
+   "id": "a7a4f261",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -338,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaba1122",
+   "id": "fb9f13a2",
    "metadata": {
     "hide-output": false
    },
@@ -360,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bc548db",
+   "id": "ae13d503",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -369,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c984feab",
+   "id": "233c985d",
    "metadata": {
     "hide-output": false
    },
@@ -380,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d951149c",
+   "id": "9cf2b4f6",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -391,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b704c817",
+   "id": "23286ae8",
    "metadata": {
     "hide-output": false
    },
@@ -404,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b790682",
+   "id": "fc9ecd3b",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -413,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a94bb4b6",
+   "id": "11c66011",
    "metadata": {
     "hide-output": false
    },
@@ -424,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b917334",
+   "id": "ffbd21d1",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -434,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e633eb93",
+   "id": "2fcc4a89",
    "metadata": {
     "hide-output": false
    },
@@ -451,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fdc3660",
+   "id": "e663ab4c",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -460,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2af71477",
+   "id": "083271b0",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a77d017",
+   "id": "bfcec24c",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -480,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be055b41",
+   "id": "f58996ee",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -540,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c4b9ba6",
+   "id": "78864cc4",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -551,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8304d4af",
+   "id": "10cef81a",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b76411d6",
+   "id": "29450880",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -579,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c00c32b2",
+   "id": "fb05e02c",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de25384a",
+   "id": "741649d9",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -600,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72167ada",
+   "id": "66946779",
    "metadata": {
     "hide-output": false
    },
@@ -617,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cec87ac",
+   "id": "fbe785d5",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -630,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83779e2f",
+   "id": "7547fc8d",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21a1a919",
+   "id": "6cdfcd64",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -652,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9face00",
+   "id": "803c35de",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4261860e",
+   "id": "a4c8e6fd",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -682,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0bedae5",
+   "id": "41b558de",
    "metadata": {
     "hide-output": false
    },
@@ -699,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0366d2d9",
+   "id": "7375a632",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -707,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "312ec6b2",
+   "id": "ac493cd9",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -753,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "841961ff",
+   "id": "f89c4c0e",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -764,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4875e90d",
+   "id": "4ccaf2c5",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "101bf5a2",
+   "id": "6009121d",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -792,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eebfd505",
+   "id": "6623d715",
    "metadata": {
     "hide-output": false
    },
@@ -811,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00513b64",
+   "id": "dec1ca3e",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -824,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2f7c5ab",
+   "id": "37e0397a",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b43a7172",
+   "id": "a39c23af",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -843,7 +840,7 @@
   }
  ],
  "metadata": {
-  "date": 1695019732.7275548,
+  "date": 1695173318.852461,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
