--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c33f2ffb",
+   "id": "8b2b5503",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcedeed8",
+   "id": "6cade975",
    "metadata": {},
    "source": [
     "# Troubleshooting"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec070787",
+   "id": "c5b8f606",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa3cfc7a",
+   "id": "21e5009a",
    "metadata": {},
    "source": [
     "This page is for readers experiencing errors when running the code from the lectures."
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f67d2a87",
+   "id": "88dce179",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "209a899f",
+   "id": "6eaca329",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -98,7 +98,7 @@
   }
  ],
  "metadata": {
-  "date": 1695019732.862402,
+  "date": 1695173318.9855905,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
