--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "38bcb862",
+   "id": "696557c8",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cd0d456",
+   "id": "602e02c0",
    "metadata": {},
    "source": [
     "# References\n",
@@ -25,7 +25,7 @@
   }
  ],
  "metadata": {
-  "date": 1695019732.918658,
+  "date": 1695173319.0412028,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
