--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2cd6ad91",
+   "id": "bd0306f7",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bb631ea",
+   "id": "2ca6c7b8",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78b0ab4d",
+   "id": "8b13e8b7",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8696365b",
+   "id": "e7407fbe",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f9833d3",
+   "id": "52212ddb",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9f52468",
+   "id": "3efd4823",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49580d0e",
+   "id": "25f543ee",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bea4767",
+   "id": "8ced4e8f",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1aaee29",
+   "id": "97aa874c",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f053c197",
+   "id": "aa020cac",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1fdd359",
+   "id": "9fdb297d",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f581d291",
+   "id": "a19eef1b",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0b18dbf",
+   "id": "82da1f80",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3fd7908",
+   "id": "830e727d",
    "metadata": {
     "hide-output": false
    },
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "684584e2",
+   "id": "39d2a3b1",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6be11818",
+   "id": "71e08df2",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52d3ecfc",
+   "id": "73f2960f",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7311e551",
+   "id": "64661a96",
    "metadata": {
     "hide-output": false
    },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4bcde9c",
+   "id": "52d093f3",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff2ec299",
+   "id": "967fc7cd",
    "metadata": {
     "hide-output": false
    },
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f5d0b42",
+   "id": "4b5aaff1",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab0a3da4",
+   "id": "598eb0a4",
    "metadata": {
     "hide-output": false
    },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9606427",
+   "id": "bd88140c",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26241fa7",
+   "id": "29504f7f",
    "metadata": {
     "hide-output": false
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9075ddad",
+   "id": "a82262d5",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3da9f1e0",
+   "id": "b6b0bba2",
    "metadata": {
     "hide-output": false
    },
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82d9c973",
+   "id": "2e74381d",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c18d2a4",
+   "id": "dcea0faf",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "563cca89",
+   "id": "9edf2aaf",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07f3e987",
+   "id": "9128be4e",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3549f326",
+   "id": "5e55bcaa",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c57508c6",
+   "id": "a2b8e04e",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33f7e677",
+   "id": "61c85e90",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "445fb577",
+   "id": "ac1891ec",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d08816b2",
+   "id": "b36d9519",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "709a2602",
+   "id": "105a2fcc",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6a65268",
+   "id": "5aa6d624",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a784cfd4",
+   "id": "8b463072",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b921cf5",
+   "id": "98298412",
    "metadata": {
     "hide-output": false
    },
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeb7d49b",
+   "id": "7509c7d3",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(8.1)](#equation-lambda-mle)"
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcc93335",
+   "id": "f0eec1cc",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8927e1bf",
+   "id": "ec482f23",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c205768",
+   "id": "20f88931",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3da3b963",
+   "id": "80c168ce",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5a5a062",
+   "id": "712bf03f",
    "metadata": {
     "hide-output": false
    },
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c27ff7c",
+   "id": "c61f9fd8",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -722,7 +722,7 @@
   }
  ],
  "metadata": {
-  "date": 1695019732.680407,
+  "date": 1695173318.8063362,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
