--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5797be41",
+   "id": "1c09edfc",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e10e3534",
+   "id": "c79cbde4",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fc68bea",
+   "id": "49042481",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63497192",
+   "id": "d82ac2f7",
    "metadata": {
     "hide-output": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8a8ba8f",
+   "id": "557f5b04",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0db27f6",
+   "id": "e074eadd",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80f96dff",
+   "id": "3a65093d",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c206d1ae",
+   "id": "6a3b7075",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "861a9111",
+   "id": "5285e51e",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d861ada",
+   "id": "7e568e9b",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "644bd560",
+   "id": "fb73c7c1",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b457722f",
+   "id": "b7c3db9c",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "956d206c",
+   "id": "c810260c",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "891e8938",
+   "id": "719a60a7",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d835094c",
+   "id": "1ac13f21",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9235a5e",
+   "id": "54e26928",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f0bd832",
+   "id": "0bda9966",
    "metadata": {
     "hide-output": false
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d7143da",
+   "id": "97a863a5",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e68c7710",
+   "id": "4ff8a4ce",
    "metadata": {
     "hide-output": false
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26685661",
+   "id": "2de3bb89",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76cb4699",
+   "id": "034980ac",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bad885a",
+   "id": "8dc6f9ca",
    "metadata": {},
    "source": [
     "## Exercise 9.1\n",
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caea9408",
+   "id": "b0403d49",
    "metadata": {
     "hide-output": false
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07dba5ab",
+   "id": "c5e193a0",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 9.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f13c97b",
+   "id": "6e6e4d39",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87e65987",
+   "id": "8c4dbc55",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dda49e0f",
+   "id": "83cafbb1",
    "metadata": {
     "hide-output": false
    },
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecb1fc67",
+   "id": "f37147af",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1ed8da0",
+   "id": "77550272",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e417d6c",
+   "id": "977e3194",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15376a80",
+   "id": "784dd342",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "845312d1",
+   "id": "c94e7119",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19bc9a96",
+   "id": "d25aac30",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4d5e1fe",
+   "id": "7a4559fa",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27bd7620",
+   "id": "41312990",
    "metadata": {
     "hide-output": false
    },
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab990f57",
+   "id": "6ddc2541",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "648e5977",
+   "id": "28192daf",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   }
  ],
  "metadata": {
-  "date": 1695019732.8320372,
+  "date": 1695173318.956384,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
