--- a/status.ipynb
+++ b/status.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8edba838",
+   "id": "13b12b7b",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
@@ -11,24 +11,24 @@
     "\n",
     "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/cake_eating_numerical.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
     "|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|\n",
-    "|aiyagari_jax|2023-09-18 05:40|cache|60.56|✅|\n",
-    "|arellano|2023-09-18 05:41|cache|36.03|✅|\n",
-    "|cake_eating_numerical|2023-09-18 05:41|cache|22.59|✅|\n",
-    "|ifp_egm|2023-09-18 05:43|cache|74.04|✅|\n",
-    "|intro|2023-09-18 05:43|cache|1.18|✅|\n",
-    "|inventory_dynamics|2023-09-18 05:50|cache|413.87|✅|\n",
-    "|jax_intro|2023-09-18 05:50|cache|36.88|✅|\n",
-    "|kesten_processes|2023-09-18 05:51|cache|37.03|✅|\n",
-    "|markov_asset|2023-09-18 05:51|cache|25.93|✅|\n",
-    "|mle|2023-09-18 05:52|cache|19.9|✅|\n",
-    "|newtons_method|2023-09-18 05:54|cache|165.75|✅|\n",
-    "|opt_invest|2023-09-18 05:57|cache|179.08|✅|\n",
-    "|opt_savings|2023-09-18 05:58|cache|62.88|✅|\n",
-    "|short_path|2023-09-18 05:59|cache|9.88|✅|\n",
-    "|status|2023-09-18 05:59|cache|3.86|✅|\n",
-    "|troubleshooting|2023-09-18 05:43|cache|1.18|✅|\n",
-    "|wealth_dynamics|2023-09-18 05:59|cache|33.69|✅|\n",
-    "|zreferences|2023-09-18 05:43|cache|1.18|✅|\n",
+    "|aiyagari_jax|2023-09-19 23:49|cache|60.76|✅|\n",
+    "|arellano|2023-09-19 23:49|cache|37.03|✅|\n",
+    "|cake_eating_numerical|2023-09-19 23:50|cache|24.03|✅|\n",
+    "|ifp_egm|2023-09-19 23:51|cache|74.04|✅|\n",
+    "|intro|2023-09-19 23:51|cache|4.02|✅|\n",
+    "|inventory_dynamics|2023-09-19 23:58|cache|420.93|✅|\n",
+    "|jax_intro|2023-09-19 23:59|cache|37.8|✅|\n",
+    "|kesten_processes|2023-09-19 23:59|cache|36.45|✅|\n",
+    "|markov_asset|2023-09-20 00:00|cache|25.03|✅|\n",
+    "|mle|2023-09-20 00:00|cache|21.03|✅|\n",
+    "|newtons_method|2023-09-20 00:03|cache|168.77|✅|\n",
+    "|opt_invest|2023-09-20 00:06|cache|180.09|✅|\n",
+    "|opt_savings|2023-09-20 00:07|cache|61.66|✅|\n",
+    "|short_path|2023-09-20 00:07|cache|11.02|✅|\n",
+    "|status|2023-09-20 00:07|cache|3.99|✅|\n",
+    "|troubleshooting|2023-09-19 23:51|cache|4.02|✅|\n",
+    "|wealth_dynamics|2023-09-20 00:08|cache|36.03|✅|\n",
+    "|zreferences|2023-09-19 23:51|cache|4.02|✅|\n",
     "\n",
     "<a id='status-machine-details'></a>\n",
     "These lectures are built on `linux` instances through `github actions`  and `amazon web services (aws)` to\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9da03b19",
+   "id": "53f788c3",
    "metadata": {
     "hide-output": false
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de36d6ef",
+   "id": "05d95d22",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "662f0f39",
+   "id": "f4eb5b6c",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   }
  ],
  "metadata": {
-  "date": 1695019732.8543904,
+  "date": 1695173318.977975,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
